@@ -1,6 +1,11 @@
 Revision history for Perl extension App-Gimei
 
 {{$NEXT}}
+    - Support Strawberry Perl for Windows
+    - Bump up actions-setup-perl
+    - Switch to Carmel from Carton for managing module dependencies
+    - Add DEVELOPMENT.md
+    - Changed to fix module versions in cpanfile      
 
 v0.2.9 2026-01-16T04:40:28Z
     - bump perl v5.38
